// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LeasingPerformanceReport renders baseline report correctly 1`] = `
"<ReportSection name=\\"Leasing Performance\\" sectionItems={[undefined]} smallMarginTop={true}>
  <Component type={[undefined]} report={{...}} />
  <Component report={{...}} />
</ReportSection>"
`;

exports[`LeasingPerformanceReport renders baseline report correctly 2`] = `
"<BoxRow spacing=\\"normal\\">
  <PercentageGraphBox type={[undefined]} name=\\"Leased\\" infoTooltip=\\"leased_rate\\" value={0.74} delta={[undefined]} series={[undefined]} target={[undefined]} extraContent={{...}} />
  <PercentageGraphBox type={[undefined]} name=\\"Retention\\" infoTooltip=\\"retention_rate\\" value={0.71} delta={[undefined]} series={[undefined]} target={[undefined]} extraContent=\\"94 Notices to Renew (Out of 132)\\" />
  <PercentageGraphBox type={[undefined]} name=\\"Occupied\\" infoTooltip=\\"occupied_rate\\" value={0.71} delta={[undefined]} series={[undefined]} target={[undefined]} extraContent={{...}} />
</BoxRow>"
`;

exports[`LeasingPerformanceReport renders baseline report correctly 3`] = `
"<div className=\\"lease-performance-report__detail-numbers\\">
  <BoxRow spacing=\\"normal\\">
    <BoxColumn>
      <WithFormatters(SmallBoxLayout) name=\\"Lease Applications\\" value={96} target={[undefined]} delta={[undefined]} />
      <WithFormatters(SmallBoxLayout) name=\\"Cancellations and Denials\\" value={28} target={[undefined]} delta={[undefined]} />
    </BoxColumn>
    <BoxColumn>
      <WithFormatters(SmallBoxLayout) name=\\"Notices to Renew\\" value={94} target={[undefined]} delta={[undefined]} />
      <WithFormatters(SmallBoxLayout) name=\\"Notices to Vacate\\" value={38} target={[undefined]} delta={[undefined]} />
    </BoxColumn>
    <BoxColumn>
      <WithFormatters(SmallBoxLayout) name=\\"Move Ins\\" value={72} target={[undefined]} delta={[undefined]} />
      <WithFormatters(SmallBoxLayout) name=\\"Move Outs\\" value={36} target={[undefined]} delta={[undefined]} />
    </BoxColumn>
  </BoxRow>
</div>"
`;

exports[`LeasingPerformanceReport renders performance report correctly 1`] = `
"<ReportSection name=\\"Leasing Performance\\" sectionItems={[undefined]} smallMarginTop={true}>
  <Component type={[undefined]} report={{...}} />
  <Component report={{...}} />
</ReportSection>"
`;

exports[`LeasingPerformanceReport renders performance report correctly 2`] = `
"<BoxRow spacing=\\"normal\\">
  <PercentageGraphBox type={[undefined]} name=\\"Leased\\" infoTooltip=\\"leased_rate\\" value={0.87} delta={0.02} series={{...}} target={0.95} extraContent={{...}} />
  <PercentageGraphBox type={[undefined]} name=\\"Retention\\" infoTooltip=\\"retention_rate\\" value={0.6} delta={[undefined]} series={{...}} target={0.63} extraContent=\\"7 Notices to Renew (Out of 11)\\" />
  <PercentageGraphBox type={[undefined]} name=\\"Occupied\\" infoTooltip=\\"occupied_rate\\" value={0.85} delta={0.04} series={{...}} target={0.93} extraContent={{...}} />
</BoxRow>"
`;

exports[`LeasingPerformanceReport renders performance report correctly 3`] = `
"<div className=\\"lease-performance-report__detail-numbers\\">
  <BoxRow spacing=\\"normal\\">
    <BoxColumn>
      <WithFormatters(SmallBoxLayout) name=\\"Lease Applications\\" value={16} target={19} delta={-2} />
      <WithFormatters(SmallBoxLayout) name=\\"Cancellations and Denials\\" value={3} target={4} delta={-1} />
    </BoxColumn>
    <BoxColumn>
      <WithFormatters(SmallBoxLayout) name=\\"Notices to Renew\\" value={7} target={6} delta={2} />
      <WithFormatters(SmallBoxLayout) name=\\"Notices to Vacate\\" value={5} target={3} delta={-1} />
    </BoxColumn>
    <BoxColumn>
      <WithFormatters(SmallBoxLayout) name=\\"Move Ins\\" value={13} target={15} delta={0} />
      <WithFormatters(SmallBoxLayout) name=\\"Move Outs\\" value={4} target={3} delta={1} />
    </BoxColumn>
  </BoxRow>
</div>"
`;

exports[`LeasingPerformanceReport renders with section items correctly 1`] = `
"<ReportSection name=\\"Leasing Performance\\" sectionItems={{...}} smallMarginTop={true}>
  <Component type={[undefined]} report={{...}} />
  <Component report={{...}} />
</ReportSection>"
`;
